@@ -1,40 +1,28 @@
 package doc.com.flexvibeproject.movie;
 
-import doc.com.flexvibeproject.comment.CommentEntity;
-import doc.com.flexvibeproject.comment.CommentRepository;
 import doc.com.flexvibeproject.episode.EpisodeEntity;
 import doc.com.flexvibeproject.episode.EpisodeRepository;
 import doc.com.flexvibeproject.exception.DuplicateResourceException;
 import doc.com.flexvibeproject.exception.InvalidInputException;
 import doc.com.flexvibeproject.exception.ResourceNotFoundException;
-import doc.com.flexvibeproject.like.LikeRepository;
-import doc.com.flexvibeproject.minio.MinioConfig;
-import doc.com.flexvibeproject.minio.MinioService;
 import doc.com.flexvibeproject.movie.dto.*;
 import doc.com.flexvibeproject.movie.role.CountryType;
 import doc.com.flexvibeproject.movie.role.LanguageType;
 import doc.com.flexvibeproject.movie.role.MovieGenre;
 import doc.com.flexvibeproject.movie.role.MovieRole;
-import io.minio.MinioClient;
-import io.minio.errors.MinioException;
 import jakarta.persistence.criteria.Predicate;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import org.apache.commons.text.similarity.LevenshteinDistance;
+import org.jetbrains.annotations.NotNull;
 import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
-import org.springframework.web.multipart.MultipartFile;
 
-import java.io.IOException;
-import java.security.InvalidKeyException;
-import java.security.NoSuchAlgorithmException;
-import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.*;
-import java.util.stream.Collector;
 import java.util.stream.Collectors;
 
 @Service
@@ -66,9 +54,9 @@ public class MovieService {
         MovieEntity movie = MovieEntity.builder()
                 .title(request.getTitle())
                 .description(request.getDescription())
-                .filePath(request.getFilePath())        // 🎥 Asosiy video
-                .trailerPath(request.getTrailerPath())  // 🎞️  Trailer
-                .imageUrl(request.getImageUrl())       // 🖼️  Rasm
+                .filePath(request.getFilePath())
+                .trailerPath(request.getTrailerPath())
+                .imageUrl(request.getImageUrl())
                 .genres(request.getGenres())
                 .country(request.getCountry())
                 .releaseYear(request.getReleaseYear())
@@ -148,24 +136,20 @@ public class MovieService {
     }
 
     public Page<MovieResponse> getAllMoviesByPage(Pageable pageable) {
-        Page<MovieEntity> page = movieRepository.findAll(pageable);
-
-        List<MovieResponse> sortedList = page.getContent().stream()
-                .map(this::mapToResponse)
-                .sorted(Comparator.comparing(MovieResponse::getReleaseDateLocal).reversed())
-                .toList();
-
-        return new PageImpl<>(
-                sortedList,
-                pageable,
-                page.getTotalElements()
-        );
+        return getMovieResponses(pageable);
     }
 
 
-    public List<MovieResponse> getMoviesByRole(MovieRole role){
-        return movieRepository.findAllByMovieRole(role)
-                .stream().map(this::mapToResponse).toList();
+    public Page<MovieResponse> getMoviesByRole(MovieRole role, Pageable pageable) {
+        Page<MovieEntity> page = movieRepository.findAllByMovieRole(role, pageable);
+
+        List<MovieResponse> movies = page.getContent().stream()
+                .map(this::mapToResponse)
+                .toList();
+
+        return new PageImpl<>(
+                movies, pageable, page.getTotalElements()
+        );
     }
 
     public List<String> getAvailableGenres() {
@@ -175,20 +159,37 @@ public class MovieService {
                 .collect(Collectors.toList());
     }
 
-    public List<MovieResponse> getMoviesByGenre(MovieGenre genre) {
-        return movieRepository.findByGenresContaining(genre).stream()
+    public Page<MovieResponse> getMoviesByGenre(MovieGenre genre, Pageable pageable) {
+
+        Page<MovieEntity> page = movieRepository.findByGenresContaining(genre, pageable);
+
+        List<MovieResponse> moviesByGenre = page.getContent().stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
+
+        return new PageImpl<>(
+                moviesByGenre,
+                pageable,
+                page.getTotalElements()
+        );
     }
 
     public List<Integer> getAllAvailableYears() {
         return movieRepository.findAllDistinctYears();
     }
 
-    public List<MovieResponse> getMoviesByYear(Integer year) {
-        return movieRepository.findAllByReleaseYear(year).stream()
+    public Page<MovieResponse> getMoviesByYear(Integer year, Pageable pageable) {
+        Page<MovieEntity> page = movieRepository.findAllByReleaseYear(year, pageable);
+
+        List<MovieResponse> moviesByYear = page.getContent().stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
+
+        return new PageImpl<>(
+                moviesByYear,
+                pageable,
+                page.getTotalElements()
+        );
     }
 
     public List<String> getAvailableLanguages() {
@@ -198,17 +199,23 @@ public class MovieService {
                 .collect(Collectors.toList());
     }
 
-    public List<MovieResponse> getMoviesByLanguage(LanguageType language) {
-        return movieRepository.findByLanguage(language).stream()
+    public Page<MovieResponse> getMoviesByLanguage(LanguageType language, Pageable pageable) {
+        Page<MovieEntity> page = movieRepository.findByLanguage(language, pageable);
+
+        List<MovieResponse> moviesByLanguage = page.getContent().stream()
                 .map(this::mapToResponse)
-                .collect(Collectors.toList());
+                .toList();
+
+        return new PageImpl<>(
+                moviesByLanguage,
+                pageable,
+                page.getTotalElements()
+        );
     }
 
-    public List<MovieResponse> smartSearch(String rawText) {
+    public Page<MovieResponse> smartSearch(String rawText, Pageable pageable) {
         if (rawText == null || rawText.isBlank()) {
-            return movieRepository.findAll().stream()
-                    .map(this::mapToResponse)
-                    .collect(Collectors.toList());
+            return getMovieResponses(pageable);
         }
 
         String text = rawText.toLowerCase().trim();
@@ -222,11 +229,9 @@ public class MovieService {
         Boolean isPremiere = null;
         List<String> titleWords = new ArrayList<>();
 
-        // Tokenlarni tahlil qilish
         for (String word : tokens) {
             boolean isSpecialField = false;
 
-            // Fuzzy matching bilan enum'larni topish
             if (fuzzyMatchEnum(MovieGenre.class, word).isPresent()) {
                 foundGenres.add(fuzzyMatchEnum(MovieGenre.class, word).get());
                 isSpecialField = true;
@@ -247,17 +252,15 @@ public class MovieService {
                 isSpecialField = true;
             }
 
-            // Premyera aniqlash
             if (word.contains("premyera") || word.contains("premera") || word.contains("primyera") ||
                     word.contains("premiere") || word.contains("yangi")) {
                 isPremiere = true;
                 isSpecialField = true;
             }
 
-            // Yil aniqlash
             if (word.matches("\\d{4}")) {
                 int year = Integer.parseInt(word);
-                if (year >= 1900 && year <= 2030) { // Mantiqiy yil oralig'i
+                if (year >= 1900 && year <= 2030) {
                     foundYear = year;
                     isSpecialField = true;
                 }
@@ -266,33 +269,44 @@ public class MovieService {
                 isSpecialField = true;
             }
 
-            // Agar bu maxsus field bo'lmasa, title uchun saqlash
             if (!isSpecialField) {
                 titleWords.add(word);
             }
         }
 
-        // JPA Specification yaratish
         Specification<MovieEntity> spec = createUniversalSearchSpec(
                 titleWords, foundGenres, foundLanguages, foundCountries,
                 foundTypes, foundYear, isPremiere
         );
 
-        List<MovieEntity> results = movieRepository.findAll(spec);
+        Page<MovieEntity> resultsPage = movieRepository.findAll(spec, pageable);
 
-        // Agar natija bo'sh bo'lsa, fuzzy search qilish
-        if (results.isEmpty() && !titleWords.isEmpty()) {
-            return performFuzzyTitleSearch(String.join(" ", titleWords));
+        if (resultsPage.getContent().isEmpty() && !titleWords.isEmpty()) {
+            return performFuzzyTitleSearch(String.join(" ", titleWords), pageable); // Page qaytaradi
         }
 
-        // Natijalarni similarity bo'yicha tartibga solish
-        return results.stream()
+        List<MovieEntity> unsortedContent = resultsPage.getContent();
+        List<MovieEntity> sortedContent = unsortedContent.stream()
+                .sorted((a, b) -> calculateRelevanceScore(mapToResponse(b), rawText) - calculateRelevanceScore(mapToResponse(a), rawText))
+                .toList();
+
+        List<MovieResponse> sortedResponses = sortedContent.stream()
                 .map(this::mapToResponse)
-                .sorted((a, b) -> calculateRelevanceScore(b, rawText) - calculateRelevanceScore(a, rawText))
                 .collect(Collectors.toList());
+
+        return new PageImpl<>(sortedResponses, pageable, resultsPage.getTotalElements());
     }
 
-    // Universal search specification
+    @NotNull
+    private Page<MovieResponse> getMovieResponses(Pageable pageable) {
+        Page<MovieEntity> page = movieRepository.findAll(pageable);
+        List<MovieResponse> sortedList = page.getContent().stream()
+                .map(this::mapToResponse)
+                .sorted(Comparator.comparing(MovieResponse::getReleaseDateLocal).reversed())
+                .toList();
+        return new PageImpl<>(sortedList, pageable, page.getTotalElements());
+    }
+
     private Specification<MovieEntity> createUniversalSearchSpec(
             List<String> titleWords,
             Set<MovieGenre> foundGenres,
@@ -305,12 +319,11 @@ public class MovieService {
         return (root, query, cb) -> {
             List<Predicate> predicates = new ArrayList<>();
 
-            // Title bo'yicha qidirish - har bir so'z uchun
             if (!titleWords.isEmpty()) {
                 List<Predicate> titlePredicates = new ArrayList<>();
 
                 for (String word : titleWords) {
-                    if (word.length() >= 2) { // 2 belgidan kichik so'zlarni e'tiborsiz qoldirish
+                    if (word.length() >= 2) {
                         titlePredicates.add(
                                 cb.like(cb.lower(root.get("title")), "%" + word + "%")
                         );
@@ -318,12 +331,10 @@ public class MovieService {
                 }
 
                 if (!titlePredicates.isEmpty()) {
-                    // Kamida bitta so'z title'da bo'lishi kerak
                     predicates.add(cb.or(titlePredicates.toArray(new Predicate[0])));
                 }
             }
 
-            // Genre'lar bo'yicha qidirish
             if (!foundGenres.isEmpty()) {
                 List<Predicate> genrePredicates = new ArrayList<>();
                 for (MovieGenre genre : foundGenres) {
@@ -332,65 +343,70 @@ public class MovieService {
                 predicates.add(cb.or(genrePredicates.toArray(new Predicate[0])));
             }
 
-            // Language bo'yicha qidirish
             if (!foundLanguages.isEmpty()) {
                 predicates.add(root.get("language").in(foundLanguages));
             }
 
-            // Country bo'yicha qidirish
             if (!foundCountries.isEmpty()) {
                 predicates.add(root.get("country").in(foundCountries));
             }
 
-            // MovieRole bo'yicha qidirish
             if (!foundTypes.isEmpty()) {
                 predicates.add(root.get("movieRole").in(foundTypes));
             }
 
-            // Yil bo'yicha qidirish
             if (foundYear != null) {
                 predicates.add(cb.equal(root.get("releaseYear"), foundYear));
             }
 
-            // Premyera bo'yicha qidirish
             if (isPremiere != null) {
                 predicates.add(cb.equal(root.get("premiere"), isPremiere));
             }
 
-            // Agar hech qanday predicate bo'lmasa, hamma filmni qaytarish
             if (predicates.isEmpty()) {
-                return cb.conjunction(); // TRUE qaytaradi
+                return cb.conjunction();
             }
 
-            // AND operatori o'rniga OR operatori - ko'proq natija uchun
             return cb.or(predicates.toArray(new Predicate[0]));
         };
     }
 
-    // Fuzzy title search - agar asosiy qidiruvda natija bo'lmasa
-    private List<MovieResponse> performFuzzyTitleSearch(String searchTitle) {
+    private Page<MovieResponse> performFuzzyTitleSearch(String searchTitle, Pageable pageable) {
         List<MovieEntity> allMovies = movieRepository.findAll();
 
-        return allMovies.stream()
+        List<MovieEntity> fuzzyResults = allMovies.stream()
                 .filter(movie -> isSimilar(movie.getTitle(), searchTitle))
-                .map(this::mapToResponse)
                 .sorted((a, b) -> calculateTitleSimilarity(b.getTitle(), searchTitle) -
                         calculateTitleSimilarity(a.getTitle(), searchTitle))
                 .collect(Collectors.toList());
+
+        int start = (int) pageable.getOffset();
+        int end = Math.min((start + pageable.getPageSize()), fuzzyResults.size());
+
+        List<MovieEntity> pagedFuzzy;
+        if (start >= fuzzyResults.size()) {
+            pagedFuzzy = Collections.emptyList();
+        } else {
+            pagedFuzzy = fuzzyResults.subList(start, end);
+        }
+
+        List<MovieResponse> pagedResponses = pagedFuzzy.stream()
+                .map(this::mapToResponse)
+                .collect(Collectors.toList());
+
+        long totalFuzzy = fuzzyResults.size();
+        return new PageImpl<>(pagedResponses, pageable, totalFuzzy);
     }
 
-    // Relevance score hisoblash
     private int calculateRelevanceScore(MovieResponse movie, String searchText) {
         int score = 0;
         String searchLower = searchText.toLowerCase();
         String titleLower = movie.getTitle() != null ? movie.getTitle().toLowerCase() : "";
 
-        // Title'da aniq so'z bor bo'lsa
         if (titleLower.contains(searchLower)) {
             score += 100;
         }
 
-        // Title'da qisman so'zlar bor bo'lsa
         String[] searchWords = searchLower.split("\\s+");
         for (String word : searchWords) {
             if (word.length() >= 2 && titleLower.contains(word)) {
@@ -398,7 +414,6 @@ public class MovieService {
             }
         }
 
-        // Yangi filmlar uchun bonus
         if (movie.getReleaseYear() != null && movie.getReleaseYear() >= 2020) {
             score += 5;
         }
@@ -406,7 +421,6 @@ public class MovieService {
         return score;
     }
 
-    // Title similarity score
     private int calculateTitleSimilarity(String title, String search) {
         if (title == null || search == null) return 0;
 
@@ -414,10 +428,9 @@ public class MovieService {
         int maxLength = Math.max(title.length(), search.length());
         int dist = distance.apply(title.toLowerCase(), search.toLowerCase());
 
-        return maxLength - dist; // Ko'proq o'xshash bo'lsa, ko'proq score
+        return maxLength - dist;
     }
 
-    // Yaxshilangan fuzzy enum matching
     public <E extends Enum<E>> Optional<E> fuzzyMatchEnum(Class<E> enumClass, String input) {
         if (input == null || input.isBlank()) {
             return Optional.empty();
@@ -427,14 +440,12 @@ public class MovieService {
         double maxDistance = 0.9;
         String inputLower = input.toLowerCase();
 
-        // Birinchi: aniq mos kelish
         for (E enumValue : enumClass.getEnumConstants()) {
             if (enumValue.name().toLowerCase().equals(inputLower)) {
                 return Optional.of(enumValue);
             }
         }
 
-        // Ikkinchi: ichida mavjudlik
         for (E enumValue : enumClass.getEnumConstants()) {
             String enumName = enumValue.name().toLowerCase();
             if (enumName.contains(inputLower) || inputLower.contains(enumName)) {
@@ -442,7 +453,6 @@ public class MovieService {
             }
         }
 
-        // Uchinchi: toString() metodini tekshirish
         for (E enumValue : enumClass.getEnumConstants()) {
             String enumString = enumValue.toString().toLowerCase();
             if (enumString.equals(inputLower) ||
@@ -452,14 +462,12 @@ public class MovieService {
             }
         }
 
-        // To'rtinchi: Levenshtein distance
         return Arrays.stream(enumClass.getEnumConstants())
                 .filter(e -> distance.apply(e.name().toLowerCase(), inputLower) <= maxDistance)
                 .min(Comparator.comparingInt(e ->
                         distance.apply(e.name().toLowerCase(), inputLower)));
     }
 
-    // Yaxshilangan similarity checker
     private boolean isSimilar(String a, String b) {
         if (a == null || b == null) {
             return false;
@@ -468,17 +476,14 @@ public class MovieService {
         String aLower = a.toLowerCase();
         String bLower = b.toLowerCase();
 
-        // Aniq mos kelish
         if (aLower.equals(bLower)) {
             return true;
         }
 
-        // Ichida mavjudlik (katta qismini qamrab olsa)
         if (aLower.contains(bLower) || bLower.contains(aLower)) {
             return true;
         }
 
-        // So'zma-so'z taqqoslash
         String[] wordsA = aLower.split("\\s+");
         String[] wordsB = bLower.split("\\s+");
 
@@ -494,13 +499,11 @@ public class MovieService {
             }
         }
 
-        // Agar so'zlarning yarmidan ko'pi mos kelsa
         int totalWords = Math.min(wordsA.length, wordsB.length);
         if (totalWords > 0 && (double) matchingWords / totalWords >= 0.5) {
             return true;
         }
 
-        // Levenshtein distance
         LevenshteinDistance distance = new LevenshteinDistance();
         int maxAllowed = Math.max(2, Math.min(aLower.length(), bLower.length()) / 3);
 
@@ -513,7 +516,7 @@ public class MovieService {
                 .orElseThrow(() -> new ResourceNotFoundException("Movie not found with id: " + movieId));
         if (movie.getMovieRole() == MovieRole.SERIAL) {
             throw new ResourceNotFoundException("You can not post view for Serial: " + movieId);
-        }else{
+        } else {
             movie.setViewCount(movie.getViewCount() + 1);
         }
         movieRepository.save(movie);
@@ -566,14 +569,13 @@ public class MovieService {
             return movieRepository.sumViewCountByMovieRole(MovieRole.FILM);
         }
     }
+
     public ContentCountsResponse getContentCountsLastMonth() {
         LocalDateTime oneMonthAgo = LocalDateTime.now().minusMonths(1);
 
-        // Count films and concerts
         int filmCount = movieRepository.countByMovieRoleAndReleaseDateLocalAfter(MovieRole.FILM, oneMonthAgo);
         int concertCount = movieRepository.countByMovieRoleAndReleaseDateLocalAfter(MovieRole.CONCERT, oneMonthAgo);
 
-        // Count serials and their episodes
         List<MovieEntity> serials = movieRepository.findByMovieRoleAndReleaseDateLocalAfter(MovieRole.SERIAL, oneMonthAgo);
         List<SerialCountResponse> serialCounts = serials.stream().map(serial -> {
             int episodeCount = episodeRepository.countByMovieEntityAndCreatedDateAfter(serial, oneMonthAgo);
